--- a/requirements.txt
+++ b/requirements.txt
@@ -17,12 +17,13 @@ pytest==6.2.4
 pytest-django==4.4.0
 pytest-pythonpath==0.7.3
 python-dateutil==2.8.2
+python-dotenv==0.20.0
 pytz==2022.1
 requests==2.26.0
 six==1.16.0
 sorl-thumbnail==12.7.0
 sqlparse==0.4.2
 toml==0.10.2
-typing-extensions==4.1.1
+typing_extensions==4.1.1
 urllib3==1.26.9
 zipp==3.8.0
