--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 attrs==21.4.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
-Django==2.2.16
+Django>=2.2.28
 django-debug-toolbar==3.2.4
 Faker==12.0.1
 idna==3.3
@@ -9,7 +9,7 @@ importlib-metadata==4.11.3
 iniconfig==1.1.1
 mixer==7.1.2
 packaging==21.3
-Pillow==8.3.1
+Pillow>=9.0.1
 pluggy==0.13.1
 py==1.11.0
 pyparsing==3.0.8
